dfir_rs/tests/compile-fail-stable/surface_source_interval_badarg.stderr
error[E0308]: mismatched types
 --> tests/compile-fail-stable/surface_source_interval_badarg.rs:7:25
  |
7 |         source_interval(5) -> for_each(std::mem::drop);
  |         --------------- ^ expected `Duration`, found integer
  |         |
  |         arguments to this function are incorrect
  |
note: function defined here
 --> $CARGO/tokio-$VERSION/src/time/interval.rs
  |
  | pub fn interval(period: Duration) -> Interval {
  |        ^^^^^^^^

error[E0277]: the trait bound `dfir_rs::tokio_stream::adapters::Map<IntervalStream, {closure@$DIR/tests/compile-fail-stable/surface_source_interval_badarg.rs:7:9: 7:24}>: FusedStream` is not satisfied
 --> tests/compile-fail-stable/surface_source_interval_badarg.rs:7:9
  |
7 |         source_interval(5) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `FusedStream` is not implemented for `dfir_rs::tokio_stream::adapters::Map<IntervalStream, {closure@$DIR/tests/compile-fail-stable/surface_source_interval_badarg.rs:7:9: 7:24}>`
  = help: the following other types implement trait `FusedStream`:
            &mut F
            Box<S>
            BufferUnordered<St>
            Buffered<St>
            FlatMapUnordered<St, U, F>
            FlattenSink<Fut, Si>
            FlattenStream<F>
            FuturesOrdered<Fut>
          and $N others
note: required by a bound in `check_stream`
 --> tests/compile-fail-stable/surface_source_interval_badarg.rs:7:9
  |
7 |         source_interval(5) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^^ required by this bound in `check_stream`
